examples/test/testpolicy11271.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11271
  namespace: namespace493
spec:
  podSelector:
    matchLabels:
      key41: value4
      key45: value49
      key30: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value24
          key16: value44
          key24: value3
      podSelector:
        matchLabels:
          key13: value43
